# dashboards

dashboards/: docker-compose.yml  dockerfile  pyproject.toml  readme.md  requirements.txt
dashboards/app/: __init__.py  app.py  index.py
dashboards/app/pages/: aqueon_case.py  builder.py  home.py  login.py  settings.py
dashboards/app/sql_scripts/: 001-count_total_wells.sql  002-count_producer_wells.sql  003-count_injector_wells.sql  004-count_conversion.sql  005-count_layer_fb_comp.sql  006-avg_coordinates_wells.sql  007-producers_dropdown.sql  008-ly_fb_comp_dropdown.sql  009-fit_info.sql  010A_real_production_field_level.sql  010B-real_production_reservoir_level.sql  010C-real_production_fb_level.sql
dashboards/kubernetes/: dashboards.yaml
dashboards/sql_test/: 01-list_cases.py  test_bdass.py  test_bdass_conn.py
